app nav hidden and spacing fixes

--- a/src/assets/css/simple-sidebar.css
+++ b/src/assets/css/simple-sidebar.css
@@ -20,7 +20,7 @@ body {
 }
 
 #wrapper.toggled {
-    padding-left: 250px;
+    /*padding-left: 250px;*/
 }
 
 #sidebar-wrapper {
@@ -39,7 +39,7 @@ body {
 }
 
 #wrapper.toggled #sidebar-wrapper {
-    width: 250px;
+    /*width: 250px;*/
 }
 
 #page-content-wrapper {
@@ -49,8 +49,8 @@ body {
 }
 
 #wrapper.toggled #page-content-wrapper {
-    position: absolute;
-    margin-right: -250px;
+    /*position: absolute;
+    margin-right: -250px;*/
 }
 
 
@@ -107,13 +107,13 @@ body {
 
 @media(min-width:768px) {
     #wrapper {
-        padding-left: 250px;
+        /*padding-left: 250px;*/
     }
     #wrapper.toggled {
         padding-left: 0;
     }
     #sidebar-wrapper {
-        width: 250px;
+        /*width: 250px;*/
     }
     #wrapper.toggled #sidebar-wrapper {
         width: 0;
